--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "express-validator": "^6.6.1",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
